@@ -15,6 +15,7 @@ Bug fixes:
 - #1073: made getImgTag more robust.
 - Fixed #628: Need an action to remove a translation.
 - Fixed #1205: Faulty logged_in redirect with a HTTPS secured site.
+- #1161: Added a migration script to the "boxless" setup.
 - Fixed #770: Remove in cpsdefault.css.dtml all the CSS directives pertaining to
   CPSBoxes and put them in a cpsboxes.css.dtml file.
 New internal features:
